# FreeCAD

cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake
src/Mod/: CMakeLists.txt
src/Mod/SearchBar/: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  setup.py
src/Mod/SearchBar/freecad/search_bar/: BuiltInSearchResults.py  GetItemGroups.py  RefreshTools.py  ResultsDocument.py  ResultsPreferences.py  ResultsRefreshTools.py  ResultsToolbar.py  SafeViewer.py  SearchBox.py  SearchBoxLight.py  SearchResults.py  Serialize.py  init_gui.py  translate_utils.py
src/Mod/SearchBar/freecad/search_bar/resources/translations/: search_bar_es-ES.ts  update_translation.sh
src/Mod/SearchBarTwo/: CMakeLists.txt  MANIFEST.in  README.md  setup.py
src/Mod/SearchBarTwo/freecad/search_bar_two/: init_gui.py
src/Mod/SearchBarTwo/freecad/search_bar_two/resources/translations/: search_bar_two_es-ES.ts  update_translation.sh
